<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bc_add_secction"
        android:scaleType="centerCrop"/>


    <ImageButton
        android:padding="10dp"
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button_desc"
        android:onClick="onBackPressed"
        android:src="@drawable/back_ic" />


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="KATALOG"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/buttonBack"/>

    <!-- Ikona filtrów -->
    <ImageButton
        android:padding="10dp"
        android:id="@+id/buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="Filtruj"
        android:src="@drawable/filter_icon" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:orientation="vertical"
        android:layout_marginTop="16dp"/>

    <View
        android:id="@+id/rectangle"
        android:layout_width="225dp"
        android:layout_height="500dp"
        android:layout_marginTop="120dp"
        android:layout_marginStart="185dp"
        android:background="@android:color/darker_gray" />


    <Button
        android:id="@+id/save_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="520dp"
        android:layout_marginStart="220dp"
        android:backgroundTint="@color/gold"
        android:text="@string/save_btn"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/kaktus_filter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="170dp"
        android:layout_marginStart="300dp"
        android:textSize="25sp"
        android:text="@string/kaktus"
        ></EditText>

    <EditText
        android:id="@+id/palm_filter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:layout_marginStart="300dp"
        android:textSize="25sp"
        android:text="@string/palm"
        ></EditText>

    <EditText
        android:id="@+id/lilia_filter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="310dp"
        android:layout_marginStart="300dp"
        android:textSize="25sp"
        android:text="@string/lilia"
        ></EditText>

    <EditText
    android:id="@+id/rose_filter"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginTop="380dp"
    android:layout_marginStart="300dp"
    android:textSize="25sp"
    android:text="@string/rose"
    ></EditText>

    <EditText
        android:id="@+id/tulip_filter"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:layout_marginStart="300dp"
        android:textSize="25sp"
        android:text="@string/tulip"
        ></EditText>



</RelativeLayout>
