<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/wybor_opcji"
        android:scaleType="centerCrop" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <Button
            android:id="@+id/add_plant"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/gold"
            android:text="@string/add_plant"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/plant_category"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/gold"
            android:text="@string/plant_catalog"
            android:textColor="@color/black"
            android:textSize="20sp" />


        <Button
            android:id="@+id/about_us"
            android:layout_width="230dp"
            android:layout_height="70dp"
            android:layout_margin="15dp"
            android:backgroundTint="@color/gold"
            android:text="@string/aboutus_option_btn"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
