<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_add_secction"
        android:scaleType="centerCrop"/>

    <!-- Przycisk powrotu -->
    <ImageButton
        android:padding="10dp"
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/back_button_desc"
        android:onClick="onBackPressed"
        android:src="@drawable/back_ic" />


    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalog"
        android:textSize="35sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/buttonBack"/>

    <!-- Ikona filtrów -->
    <ImageButton
        android:padding="10dp"
        android:id="@+id/buttonFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/filter_icon_desc"
        android:src="@drawable/filter_icon" />


    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:orientation="vertical"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
